objects/csfb__CongaInvoicingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configure Conga Invoicing</description>
    <fields>
        <fullName>csfb__BaseCNVFPage__c</fullName>
        <defaultValue>&quot;csfb__Conga_Conductor_SFB&quot;</defaultValue>
        <label>Base CN VF Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__BaseVFPage__c</fullName>
        <defaultValue>&quot;csfb__Conga_Composer&quot;</defaultValue>
        <label>Base VF Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Name_Space__c</fullName>
        <defaultValue>&quot;sfb&quot;</defaultValue>
        <label>Name Space</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csfb__Set_by_UserName__c</fullName>
        <label>Set by UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Conga Invoicing Settings</label>
</CustomObject>